[project]
name = "bleak"
version = "0.22.3"
description = "Bluetooth Low Energy platform Agnostic Klient"
authors = [{ name = "Henrik Blidh", email = "henrik.blidh@nedomkull.com" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9"
dynamic = ["classifiers", "dependencies"]

[project.urls]
"Homepage"      = "https://github.com/hbldh/bleak"
"Documentation" = "https://bleak.readthedocs.io"
"Changelog"     =  "https://github.com/hbldh/bleak/blob/develop/CHANGELOG.rst"
"Support"       =  "https://github.com/hbldh/bleak/discussions"
"Issues"        =  "https://github.com/hbldh/bleak/issues"

[tool.poetry]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Android",
]

[tool.poetry.dependencies]
async-timeout = { version = ">=3.0.0", python = "<3.11" }
typing-extensions = { version = ">=4.7.0", python = "<3.12" }
pyobjc-core = { version = ">=10.3", markers = "platform_system=='Darwin'" }
pyobjc-framework-CoreBluetooth = { version = ">=10.3", markers = "platform_system=='Darwin'" }
pyobjc-framework-libdispatch = { version = ">=10.3", markers = "platform_system=='Darwin'" }
"winrt-runtime" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Devices.Bluetooth" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Devices.Bluetooth.Advertisement" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Devices.Bluetooth.GenericAttributeProfile" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Devices.Enumeration" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Foundation" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Foundation.Collections" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Storage.Streams" = { version = ">=3.1", markers = "platform_system=='Windows'" }
dbus-fast = { version = ">=1.83.0", markers = "platform_system == 'Linux'" }

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
tomli = "^2.0.1"

[tool.poetry.group.lint.dependencies]
black = ">=24.3,<25.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^3.0.0 "

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version=38
src_paths = ["bleak", "examples", "tests", "typings"]
extend_skip = [".buildozer"]
