[project]
name = "bleak"
version = "1.1.1"
description = "Bluetooth Low Energy platform Agnostic Klient"
authors = [{ name = "Henrik Blidh", email = "henrik.blidh@nedomkull.com" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9"
dynamic = ["classifiers", "dependencies"]

[project.urls]
"Homepage"      = "https://github.com/hbldh/bleak"
"Documentation" = "https://bleak.readthedocs.io"
"Changelog"     =  "https://github.com/hbldh/bleak/blob/develop/CHANGELOG.rst"
"Support"       =  "https://github.com/hbldh/bleak/discussions"
"Issues"        =  "https://github.com/hbldh/bleak/issues"

[tool.poetry]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Android",
]

[tool.poetry.dependencies]
async-timeout = { version = ">=3.0.0", python = "<3.11" }
typing-extensions = { version = ">=4.7.0", python = "<3.12" }
pyobjc-core = { version = ">=10.3", markers = "platform_system=='Darwin'" }
pyobjc-framework-CoreBluetooth = { version = ">=10.3", markers = "platform_system=='Darwin'" }
pyobjc-framework-libdispatch = { version = ">=10.3", markers = "platform_system=='Darwin'" }
"winrt-runtime" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Devices.Bluetooth" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Devices.Bluetooth.Advertisement" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Devices.Bluetooth.GenericAttributeProfile" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Devices.Enumeration" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Foundation" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Foundation.Collections" = { version = ">=3.1", markers = "platform_system=='Windows'" }
"winrt-Windows.Storage.Streams" = { version = ">=3.1", markers = "platform_system=='Windows'" }
dbus-fast = { version = ">=1.83.0", markers = "platform_system == 'Linux'" }

[project.optional-dependencies]
pythonista = ["bleak-pythonista>=0.1.1"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = { version = ">=8.2.3", python = ">=3.11" }
sphinx-rtd-theme = { version = ">=3.0.2", python = ">=3.11" }

[tool.poetry.group.lint.dependencies]
black = ">=24.3,<25.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^3.0.0 "

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version=39
src_paths = ["bleak", "examples", "tests"]
extend_skip = [".buildozer", "docs"]

[tool.mypy]
python_version = "3.9"
disable_error_code = ["import-not-found"]
