[project]
name = "bleak"
version = "3.0.1"
description = "Bluetooth Low Energy platform Agnostic Klient"
authors = [{ name = "Henrik Blidh", email = "henrik.blidh@nedomkull.com" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Android",
]
dependencies = [
    "async-timeout>=3.0.0; python_version<'3.11'",
    "typing-extensions>=4.7.0; python_version<'3.12'",
    "pyobjc-core>=10.3; platform_system=='Darwin'",
    "pyobjc-framework-CoreBluetooth>=10.3; platform_system=='Darwin'",
    "pyobjc-framework-libdispatch>=10.3; platform_system=='Darwin'",
    "winrt-runtime>=3.1; platform_system=='Windows'",
    "winrt-Windows.Devices.Bluetooth>=3.1; platform_system=='Windows'",
    "winrt-Windows.Devices.Bluetooth.Advertisement>=3.1; platform_system=='Windows'",
    "winrt-Windows.Devices.Bluetooth.GenericAttributeProfile>=3.1; platform_system=='Windows'",
    "winrt-Windows.Devices.Enumeration>=3.1; platform_system=='Windows'",
    "winrt-Windows.Devices.Radios>=3.1; platform_system=='Windows'",
    "winrt-Windows.Foundation>=3.1; platform_system=='Windows'",
    "winrt-Windows.Foundation.Collections>=3.1; platform_system=='Windows'",
    "winrt-Windows.Storage.Streams>=3.1; platform_system=='Windows'",
    "dbus-fast>=1.83.0; platform_system=='Linux'",
]

[project.urls]
Homepage = "https://github.com/hbldh/bleak"
Documentation = "https://bleak.readthedocs.io"
Changelog = "https://github.com/hbldh/bleak/blob/develop/CHANGELOG.rst"
Support = "https://github.com/hbldh/bleak/discussions"
Issues = "https://github.com/hbldh/bleak/issues"

[project.optional-dependencies]
pythonista = ["bleak-pythonista>=0.1.1"]

[dependency-groups]
docs = [
    "Sphinx>=8.2.3; python_version>='3.11'",
    "sphinx-rtd-theme>=3.0.2; python_version>='3.11'",
]
lint = [
    "black>=24.3,<25.0",
    "flake8>=7.1.1,<8.0.0",
    "isort>=5.13.2,<6.0.0",
]
test = [
    "pytest>=8.2.1,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "bumble>=0.0.220,<0.1.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version=310
src_paths = ["bleak", "examples", "tests"]
extend_skip = [".buildozer", "docs"]

[tool.mypy]
python_version = "3.10"
disable_error_code = ["import-not-found"]
exclude = "(.venv|kivy|recipes)/"
mypy_path = "typings"

[tool.pyright]
typeCheckingMode = "strict"
exclude = ["**/.venv/**", "**/kivy/**", "**/recipes/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    # There is an issue with coverage binary extensions on Python 3.10 on Linux.
    # Not a big deal, just reduces performance a bit.
    '''ignore:Couldn't import C tracer:coverage.exceptions.CoverageWarning''',
]

addopts = """
--cov=bleak
--cov-branch
--cov-report html
"""
